[package]
name = "ff_ce"
version = "0.14.1"
authors = ["Sean Bowe <ewillbefull@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Library for building and interfacing with finite fields"
homepage = "https://github.com/TaceoLabs/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/TaceoLabs/ff"
edition = "2018"
exclude = [
    "tester",
    "asm_tester"
]

[dependencies]
byteorder = "1"
rand = "0.8"
ff_derive_ce = { git = "https://github.com/TaceoLabs/ff", branch = "feature/rand0.8", version = "0.11", optional = true }
# ff_derive_ce = { path = "ff_derive", optional = true }
hex = {version = "0.4"}
serde = "1"

[features]
default = []
derive = ["ff_derive_ce"]
asm_derive = ["derive", "ff_derive_ce/asm"]
