[package]
name = "ff_derive_ce"
version = "0.11.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>",    
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Procedural macro library used to build custom prime field implementations"
homepage = "https://github.com/TaceoLabs/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/TaceoLabs/ff"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
proc-macro2 = "1"
quote = "1"
syn = "1"
serde = {version = "1", features = ["derive"]}

[features]
default = []
asm = []
serde = []
